feat: comprehensive enhancement of Availability Service technical architecture
- Complete Cloud Spanner database schema with bank participant management
- Advanced gRPC service architecture with Protocol Buffer definitions
- Multi-tier Redis cache optimization for ultra-low latency queries
- Comprehensive bank status management UI with real-time operations dashboard
- Advanced resilience patterns: Circuit breakers, optimistic locking, SAGA pattern
- Transaction management with two-phase commit for critical operations
- Chaos engineering framework for production resilience testing
- Complete error handling for network, database, and application failures
- Advanced payment traceability with unique ID management and audit trails
- Operational UI for configuration management, maintenance scheduling, and monitoring
- Security configuration with mTLS, JWT validation, and role-based access control
- Performance optimization with local and distributed caching strategies

The availability service now provides implementation-ready specifications
for real-time bank status management with enterprise-grade reliability,
comprehensive operational dashboards, and advanced chaos engineering capabilities.